Mon Premier commit

--- a/index.html
+++ b/index.html
@@ -50,6 +50,25 @@
 
     <section id="cards">
 
+        <div class="containerCards">
+            <div id="purple-card"> 
+                <div class="titre-projet">
+                    <p>
+                        Analyse du compte insta d’une cuisto 
+                    </p>
+                </div>
+                <br>
+                <div class="description-projet">
+                    <p>
+                        Problèmatique et objectifs, Définir la cible souhaitée, axes d’amélioration, analyse poussée, solution
+                    </p>
+                </div>
+                <div>
+                    <img id="cuisto" src="images/cuisto.png" alt="cuisto">
+                </div>
+            </div>
+        </div>
+
         <div id="card-presentation">
             <div class="presentation-text">
                 <p>
@@ -98,22 +117,7 @@
             </div>
         </div>
 
-        <div id="purple-card"> 
-            <div class="titre-projet">
-                <p>
-                    Analyse du compte insta d’une cuisto 
-                </p>
-            </div>
-            <br>
-            <div class="description-projet">
-                <p>
-                    Problèmatique et objectifs, Définir la cible souhaitée, axes d’amélioration, analyse poussée, solution
-                </p>
-            </div>
-            <div>
-                <img id="cuisto" src="images/cuisto.png" alt="cuisto">
-            </div>
-        </div>
+ 
     </div>
 
     </section>
