--- a/index.html
+++ b/index.html
@@ -44,17 +44,54 @@
 
     <section id="hero">
         <div>
-            <h1 class="">DÉVELOPPEUR DE VISIBILITÉ SUR LES RÉSEAUX SOCIAUX</h1>
+            <h1>DÉVELOPPEUR DE VISIBILITÉ SUR LES RÉSEAUX SOCIAUX</h1>
         </div>
     </section>
 
     <section id="cards">
 
         <div class="containerCards">
-            <div id="purple-card"> 
+
+            <div class="card card-phone" style="background-color: #635C4C;">
+                <h3>Développement de comptes instagram</h3>
+                <p>
+                    Stratégie marketing,<br>
+                    planification de posts,<br>
+                    analyse statistiques
+                </p>
+                <div>
+                    <img src="images/instagram.png" alt="Capture d'écran d'un de mes compte instagram">
+                </div>
+            </div>
+
+            <div class="card card-phone" style="background-color: #5271FF;">
+                <h3>Analyse du compte insta d'une chef cuisinière</h3>
+                <p>
+                    Problématique et objectifs,<br>
+                    définir la cible souhaitée,<br>
+                    axe d'amélioration, analyse poussé, solution
+                </p>
+                <div>
+                    <img src="images/cuisto.png" alt="Capture d'écran d'un de mes compte instagram">
+                </div>
+            </div>
+
+        </div>
+
+        <div class="containerCards">
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
+
+    </section>
+
+    <!-- <section id="cards">
+
+        <div class="containerCards">
+            <div id="purple-card">
                 <div class="titre-projet">
                     <p>
-                        Analyse du compte insta d’une cuisto 
+                        Analyse du compte insta d’une cuisto
                     </p>
                 </div>
                 <br>
@@ -75,52 +112,50 @@
                     Je m’appelle Antoine, je suis créateur de contenus et je développe des communautés sur les
                     réseaux depuis 3 ans.
                 </p>
-            <br>
-            <div class="description-presentation-text">
-                <p>
-                    Je tiens beaucoup à créer du contenu original et engageant en créant une bonne stratégie
-                    digitale.
-                </p>
+                <br>
+                <div class="description-presentation-text">
+                    <p>
+                        Je tiens beaucoup à créer du contenu original et engageant en créant une bonne stratégie
+                        digitale.
+                    </p>
+                </div>
+            </div>
+
+            <div class="medias">
+                <div class="contact">
+                    <p>Contactez-moi</p>
+                </div>
+
+                <div class="media">
+                    <img src="images/linkedin.svg" alt="Mon profil linkedin">
+
+                    <img src="images/Mail.svg" alt="Mon mail ">
+                </div>
+            </div>
+
+            <div id="photo-bordeaux">
+                <img src="images/antoine.svg" alt="Photo à Bordeaux">
+            </div>
+            
+            <div id="brown-card1">
+                <div class="titre-projet">
+                    <p>
+                        Développement  de comptes instagram
+                    </p>
+                </div>
+                <br>
+                <div class="description-projet">
+                    <p>
+                        Stratégie marketing, planification de posts, analyse statistiques  
+                    </p>
+                </div>
+                <div>
+                    <img id="instagram" src="images/instagram.png" alt="instagram">
+                </div>
             </div>
         </div>
 
-        <div class="medias">
-            <div class="contact">
-                <p>Contactez-moi</p>
-            </div>
-
-            <div class="media">
-                <img src="images/linkedin.svg" alt="Mon profil linkedin">
-
-                <img src="images/Mail.svg" alt="Mon mail ">
-            </div>
-        </div>
-
-        <div id="photo-bordeaux">
-            <img src="images/antoine.svg" alt="Photo à Bordeaux">
-        </div>
-        
-        <div id="brown-card1">
-            <div class="titre-projet">
-                <p>
-                    Développement  de comptes instagram
-                </p>
-            </div>
-            <br>
-            <div class="description-projet">
-                <p>
-                    Stratégie marketing, planification de posts, analyse statistiques  
-                </p>
-            </div>
-            <div>
-                <img id="instagram" src="images/instagram.png" alt="instagram">
-            </div>
-        </div>
-
- 
-    </div>
-
-    </section>
+    </section> -->
 
 </body>
 
