--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
                 </div>
             </div>
 
+            <div class="card card-phone" style="background-color: #0281EA;">
+                <h3>Refonte d’un site web de musée</h3>
+                <p>
+                    Figma : wireframe,<br>
+                    composants, conception <br>
+                    visuelle, code
+                </p>
+                <div>
+                    <img src="images/musee.png" alt="Capture d'écran de la page du site du Musba">
+                </div>
+            </div>
+
         </div>
 
         <div class="containerCards">
