--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
                 </div>
             </div>
 
+            <div class="card card-phone" style="background-color: #D9D9D9;">
+                <h3>Motion design d’une théorie scientifique</h3>
+                <p>
+                    Illustrator,  After Effects, <br>
+                    Premiere Pro
+                </p>
+                <div>
+                    <img src="images/theorieanimee.png" alt="Capture d'écran de la page du site du Musba">
+                </div>
+            </div>
+
         </div>
 
         <div class="containerCards">
