--- a/apropos.html
+++ b/apropos.html
@@ -23,19 +23,64 @@
 
 <section id="presentation">
     <div>
-        <h3>Je m’appelle Antoine, je suis créateur de contenus et je développe des communautés sur les réseaux depuis 3 ans.</h3>
+        <h3 class="h3">Je m’appelle Antoine, je suis créateur de contenus et je développe des communautés sur les réseaux depuis 3 ans.</h3>
     </div>
 
-    <p>Étudiant en première année de BUT MMI.
-        <br> <br>
-        Infos :
-Créateur et développeur de comptes sur Instagram, je développe des comptes instagram depuis plus de 3 ans.
+    <div class="text-presentation">
 
-Dans mon travail, j'apporte de la rigueur, de la qualité et de l'attention à l'utilisateur.Pour cela je développe des compétences en publiant sur les réseaux sociaux et dans la formation MMI Bordeaux, où j'apprends au sujet du montage vidéo, du marketing digital et de la gestion de projet.
+   
+    <p class="etudiant-text">Passionné par le numérique, je suis actuellement en BUT MMI à l’université Bordeaux Montaigne.  </p>
 
-L'association Gay-Lu Times m'a fait confiance pour réaliser leur site lorsque j'étais au lycée. 
+    <p>
+        Passionné par le numérique, je suis actuellement en BUT MMI à l’université Bordeaux Montaigne. 
+<br> <br>
+J’ai choisi de suivre cette formation pour gagner en compétences et acquérir de bonnes bases dans les domaines de la création, du développement et de l’analyse de données. 
+<br> <br>
+Durant cette première année, j’ai participé à de nombreux projets comme l’analyse du compte Instagram d’une chef cuisinière, la refonte d’un site web ou encore la réalisation d’un motion design, tous consultables sur mon Portfolio. 
+<br> <br>
+Parallèlement à mes études, je développe des comptes Instagram que j’anime et qui me permettent de mettre en place les compétences que j’ai acquises grâce à ma formation. 
+<br> <br>
+À partir de ma deuxième année, je souhaiterais appliquer ces compétences dans le cadre d’une alternance en entreprise qui me permettra de me spécialiser dans le marketing digital. 
+<br> <br>
+Je suis notamment intéressé par l’optimisation du SEO, la création et l’animation de contenus sur les réseaux sociaux et l’analyse des données web pour optimiser les performances de stratégies marketing. Je suis persuadé que ce sera une opportunité enrichissante.
+<br> <br>
+Dynamisme et autonomie sont des atouts qui me caractérisent. Je suis également très organisé et efficace dans tout ce que j’entreprends. 
+<br> <br>
+N'hésitez pas à me contacter si vous avez une offre d'alternance à me proposer.
+ </p>
+</div>
+</section>
 
-Je réalise également des vidéos pour que les professionnels aient une bonne image sur le web.
+<footer>
 
-Je travaille sur Première Pro, mais aussi sur des sites d'analyses statistiques tel que Social Blade. Étant très curieux, je me diversifie sur des sujets comme le développement web, de la photographie, et l'e-commerce.
-    </p>
+    <div id="footer-box">
+    <div class="box" style="color: rgb(0, 0, 0);">
+        <h3 class="travailler">Vous voulez qu’on travaille ensemble ?</h3>
+        <p class="mail">Envoyez moi un mail à cette adresse : <br>
+            antoine.courcaud@gmail.com</p>
+        <div class="box-contact">
+            <a class="contactez-moi" href="mailto:antoine.courcaud@gmail.com">Contactez-moi</a>
+            <a href=""><img src="images/icons/icon_dribble.png" alt="icon dribble" width="25"></a>
+            <a href=""><img src="images/icons/icon_twitter.png" alt="icon dribble" width="25"></a>
+            <a href="https://www.linkedin.com/in/antoine-courcaud/"><img src="images/icons/icon_linkedin.png" alt="icon dribble" width="25"></a>
+            <a href=""><img src="images/icons/icon_instagram.png" alt="icon dribble" width="25"></a>
+        </div>
+    </div>
+    </div>
+    <div class="link-footer">
+        <ul>
+            <li>
+                <a href="#">Accueil</a>
+            </li>
+            <li>
+                <a href="#">Projets</a>
+            </li>
+            <li>
+                <a href="#">À Propos</a>
+            </li>
+        </ul>
+    </div>
+    <div class="end-footer">
+        <p>© Tout droits réservés - Antoine Courcaud</p>
+    </div>
+</footer>
