--- a/analyse_communication_digitale.html
+++ b/analyse_communication_digitale.html
@@ -12,10 +12,12 @@
 
 <header>
   <nav class="nav-flex">
+    <a href="./index.html" title="Retour à l'accueil" >
     <h2>ANTOINE C.</h2>
+    </a>
     <div class="links">
-      <a>PROJETS</a>
-      <a>À PROPOS</a>
+      <a href="index.html">PROJETS</a>
+      <a href="apropos.html">À PROPOS</a>
     </div>
   </nav>
   <a href="mailto:antoine.courcaud@gmail.com" class="work">OPEN TO WORK</a>
@@ -201,34 +203,33 @@
 <footer>
 
   <div id="footer-box">
-    <div class="box" style="color: rgb(0, 0, 0);">
+  <div class="box" style="color: rgb(0, 0, 0);">
       <h3 class="travailler">Vous voulez qu’on travaille ensemble ?</h3>
       <p class="mail">Envoyez moi un mail à cette adresse : <br>
-        antoine.courcaud@gmail.com</p>
+          antoine.courcaud@gmail.com</p>
       <div class="box-contact">
-        <a class="contactez-moi" href="mailto:antoine.courcaud@gmail.com">Contactez-moi</a>
-        <a href=""><img src="images/icons/icon_dribble.png" alt="icon dribble" width="25"></a>
-        <a href=""><img src="images/icons/icon_twitter.png" alt="icon dribble" width="25"></a>
-        <a href="https://www.linkedin.com/in/antoine-courcaud/"><img src="images/icons/icon_linkedin.png"
-            alt="icon dribble" width="25"></a>
-        <a href=""><img src="images/icons/icon_instagram.png" alt="icon dribble" width="25"></a>
+          <a class="contactez-moi" href="mailto:antoine.courcaud@gmail.com">Contactez-moi</a>
+          <a href=""><img src="images/icons/icon_dribble.png" alt="icon dribble" width="25"></a>
+          <a href=""><img src="images/icons/icon_twitter.png" alt="icon dribble" width="25"></a>
+          <a href="https://www.linkedin.com/in/antoine-courcaud/"><img src="images/icons/icon_linkedin.png" alt="icon dribble" width="25"></a>
+          <a href=""><img src="images/icons/icon_instagram.png" alt="icon dribble" width="25"></a>
       </div>
-    </div>
+  </div>
   </div>
   <div class="link-footer">
-    <ul>
-      <li>
-        <a href="#">Accueil</a>
-      </li>
-      <li>
-        <a href="#">Projets</a>
-      </li>
-      <li>
-        <a href="#">À Propos</a>
-      </li>
-    </ul>
+      <ul>
+          <li>
+              <a href="index.html">Accueil</a>
+          </li>
+          <li>
+              <a href="index.html">Projets</a>
+          </li>
+          <li>
+              <a href="apropos.html">À Propos</a>
+          </li>
+      </ul>
   </div>
   <div class="end-footer">
-    <p>© Tout droits réservés - Antoine Courcaud</p>
+      <p>© Tout droits réservés - Antoine Courcaud</p>
   </div>
 </footer>
