--- a/apropos.html
+++ b/apropos.html
@@ -4,47 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>À Propos</title> 
+    <title>À Propos</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://api.fontshare.com/v2/css?f[]=clash-display@400,700,500,600&display=swap" rel="stylesheet">
 </head>
 
 <header>
-    <nav class="nav-flex">
-        <h2>ANTOINE C.</h2>
-        <div class="links">
-            <a>PROJETS</a>
-            <a>À PROPOS</a>
-        </div>
-    </nav>
-    <a href="mailto:antoine.courcaud@gmail.com" class="work">OPEN TO WORK</a>
+  <nav class="nav-flex">
+    <a href="./index.html" title="Retour à l'accueil" >
+    <h2>ANTOINE C.</h2>
+    </a>
+    <div class="links">
+      <a href="index.html">PROJETS</a>
+      <a href="apropos.html">À PROPOS</a>
+    </div>
+  </nav>
+  <a href="mailto:antoine.courcaud@gmail.com" class="work">OPEN TO WORK</a>
 </header>
 
 <section id="presentation">
     <div>
-        <h3 class="h3">Je m’appelle Antoine, je suis créateur de contenus et je développe des communautés sur les réseaux depuis 3 ans.</h3>
+        <h3 class="h3">Je m’appelle Antoine, je suis créateur de contenus et je développe des communautés sur les réseaux depuis 4 ans.</h3>
     </div>
 
     <div class="text-presentation">
 
-   
+
     <p class="etudiant-text">Passionné par le numérique, je suis actuellement en BUT MMI à l’université Bordeaux Montaigne.  </p>
 
     <p>
-        Passionné par le numérique, je suis actuellement en BUT MMI à l’université Bordeaux Montaigne. 
+J’ai choisi de suivre cette formation pour gagner en compétences et acquérir de bonnes bases dans les domaines de la création, du développement et de l’analyse de données.
 <br> <br>
-J’ai choisi de suivre cette formation pour gagner en compétences et acquérir de bonnes bases dans les domaines de la création, du développement et de l’analyse de données. 
+Durant cette première année, j’ai participé à de nombreux projets comme l’analyse du compte Instagram d’une chef cuisinière, la refonte d’un site web ou encore la réalisation d’un motion design, tous consultables sur mon Portfolio.
 <br> <br>
-Durant cette première année, j’ai participé à de nombreux projets comme l’analyse du compte Instagram d’une chef cuisinière, la refonte d’un site web ou encore la réalisation d’un motion design, tous consultables sur mon Portfolio. 
+Parallèlement à mes études, je développe des comptes Instagram que j’anime et qui me permettent de mettre en place les compétences que j’ai acquises grâce à ma formation.
 <br> <br>
-Parallèlement à mes études, je développe des comptes Instagram que j’anime et qui me permettent de mettre en place les compétences que j’ai acquises grâce à ma formation. 
-<br> <br>
-À partir de ma deuxième année, je souhaiterais appliquer ces compétences dans le cadre d’une alternance en entreprise qui me permettra de me spécialiser dans le marketing digital. 
+À partir de ma deuxième année, je souhaiterais appliquer ces compétences dans le cadre d’une alternance en entreprise qui me permettra de me spécialiser dans le marketing digital.
 <br> <br>
 Je suis notamment intéressé par l’optimisation du SEO, la création et l’animation de contenus sur les réseaux sociaux et l’analyse des données web pour optimiser les performances de stratégies marketing. Je suis persuadé que ce sera une opportunité enrichissante.
 <br> <br>
-Dynamisme et autonomie sont des atouts qui me caractérisent. Je suis également très organisé et efficace dans tout ce que j’entreprends. 
+Dynamisme et autonomie sont des atouts qui me caractérisent. Je suis également très organisé et efficace dans tout ce que j’entreprends.
 <br> <br>
 N'hésitez pas à me contacter si vous avez une offre d'alternance à me proposer.
  </p>
@@ -70,13 +70,13 @@ N'hésitez pas à me contacter si vous avez une offre d'alternance à me propose
     <div class="link-footer">
         <ul>
             <li>
-                <a href="#">Accueil</a>
+                <a href="index.html">Accueil</a>
             </li>
             <li>
-                <a href="#">Projets</a>
+                <a href="index.html">Projets</a>
             </li>
             <li>
-                <a href="#">À Propos</a>
+                <a href="apropos.html">À Propos</a>
             </li>
         </ul>
     </div>
