--- a/index.html
+++ b/index.html
@@ -69,11 +69,6 @@
       <div class="card card-phone"
         style="background: rgb(0, 0, 0); background-image: url(images/antoine.svg); background-size: cover;" style="cursor: pointer;" onclick="window.location.href='https://www.linkedin.com/in/antoine-courcaud/'">
       </div>
-
-
-
-
-
     </div>
 
 
@@ -106,13 +101,11 @@
         </div>
         </a>
       </div>
-
-
-
     </div>
 
     <div class="containerCards">
       <div class="card card-phone" style="background-color: #0281EA;">
+        <a href="refonte_site_musee.html">
         <h3>Refonte d’un site web de musée</h3>
         <p>
           Figma : wireframe,<br>
@@ -122,9 +115,11 @@
         <div>
           <img src="images/musee.png" alt="Capture d'écran de la page du site du Musba">
         </div>
+      </a>
       </div>
 
       <div class="card card-phone" style="background-color: #D9D9D9;">
+        <a href="motion_design.html">
         <h3>Motion design d’une théorie scientifique</h3>
         <p>
           Illustrator, After Effects, <br>
@@ -134,9 +129,10 @@
           <img src="images/theorieanimee.png" alt="Capture d'écran de la page du site du Musba"
             style="height: 200px; padding-top: 100px;">
         </div>
+      </a>
       </div>
-
     </div>
+
     <footer>
 
       <div id="footer-box">
@@ -146,11 +142,9 @@
             antoine.courcaud@gmail.com</p>
           <div class="box-contact">
             <a class="contactez-moi" href="mailto:antoine.courcaud@gmail.com">Contactez-moi</a>
-            <a href=""><img src="images/icons/icon_dribble.png" alt="icon dribble" width="25"></a>
-            <a href=""><img src="images/icons/icon_twitter.png" alt="icon dribble" width="25"></a>
             <a href="https://www.linkedin.com/in/antoine-courcaud/"><img src="images/icons/icon_linkedin.png"
                 alt="icon dribble" width="25"></a>
-            <a href=""><img src="images/icons/icon_instagram.png" alt="icon dribble" width="25"></a>
+            <a href="https://github.com/antoinecrcd"><img src="images/icons/logo_github.svg.png" alt="icon dribble" width="25"></a>
           </div>
         </div>
       </div>
