--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <div class="containerCards">
 
-      <div class="card card-phone" style="background-color: #1A1A1A;">
+      <div class="card card-phone height" style="background-color: #1A1A1A;">
       <a href="apropos.html">
         <h3>Je m’appelle Antoine, je suis créateur de contenus et je développe des communautés sur les réseaux depuis 4
           ans.</h3>
@@ -66,7 +66,7 @@
       </a>
       </div>
 
-      <div class="card card-phone"
+      <div class="card card-phone height"
         style="background: rgb(0, 0, 0); background-image: url(images/antoine.svg); background-size: cover;" style="cursor: pointer;" onclick="window.location.href='https://www.linkedin.com/in/antoine-courcaud/'">
       </div>
     </div>
@@ -76,28 +76,34 @@
 
       <div class="card card-phone" style="background-color: #635C4C;">
         <a href="developpement_compte_instagram.html">
-        <h3>Développement de comptes instagram</h3>
+          <div>
+            <h3>Développement de comptes instagram</h3>
+            <img class="arrow_image" src="/images/arrow.svg" alt="" width="60px" height="60px">
+          </div>
         <p>
           Stratégie marketing,<br>
           planification de posts,<br>
           analyse statistiques
         </p>
         <div>
-          <img src="images/instagram.png" alt="Capture d'écran d'un de mes compte instagram">
+          <img class="instagram_image" src="images/instagram.png" alt="Capture d'écran d'un de mes compte instagram">
         </div>
         </a>
       </div>
 
       <div class="card card-phone" style="background-color: #5271FF;">
         <a href="analyse_communication_digitale.html">
-        <h3>Analyse du compte insta d'une chef cuisinière</h3>
+          <div>
+            <h3>Analyse du compte insta d'une chef cuisinière</h3>
+            <img class="arrow_image" src="/images/arrow.svg" alt="" width="60px" height="60px">
+          </div>
         <p>
           Problématique et objectifs,<br>
           définir la cible souhaitée,<br>
           axe d'amélioration, analyse poussé, solution
         </p>
         <div>
-          <img src="images/cuisto.png" alt="Capture d'écran d'un de mes compte instagram">
+          <img class="instagram_image" src="images/cuisto.png" alt="Capture d'écran d'un de mes compte instagram">
         </div>
         </a>
       </div>
@@ -106,27 +112,34 @@
     <div class="containerCards">
       <div class="card card-phone" style="background-color: #0281EA;">
         <a href="refonte_site_musee.html">
-        <h3>Refonte d’un site web de musée</h3>
+          <div>
+            <h3>Refonte d’un site web de musée</h3>
+            <img class="arrow_image" src="/images/arrow.svg" alt="" width="60px" height="60px">
+          </div>
         <p>
           Figma : wireframe,<br>
           composants, conception <br>
           visuelle, code
         </p>
         <div>
-          <img src="images/musee.png" alt="Capture d'écran de la page du site du Musba">
+          <img  class="instagram_image" src="images/musee.png" alt="Capture d'écran de la page du site du Musba">
         </div>
       </a>
       </div>
 
       <div class="card card-phone" style="background-color: #D9D9D9;">
         <a href="motion_design.html">
-        <h3>Motion design d’une théorie scientifique</h3>
+          <div>
+            <h3>Motion design d’une théorie scientifique</h3>
+            <img class="arrow_image" src="/images/arrow.svg" alt="" width="60px" height="60px">
+          </div>
+
         <p>
           Illustrator, After Effects, <br>
           Premiere Pro
         </p>
         <div>
-          <img src="images/theorieanimee.png" alt="Capture d'écran de la page du site du Musba"
+          <img class="instagram_image" src="images/theorieanimee.png" alt="Capture d'écran de la page du site du Musba"
             style="height: 200px; padding-top: 100px;">
         </div>
       </a>
