--- a/refonte_site_musee.html
+++ b/refonte_site_musee.html
@@ -48,7 +48,7 @@
       <br> <br>
       Pour terminer, nous avons utilisé le site Google PageSpeed Insights pour améliorer nos scores en accessibilité, SEO, performances et bonnes pratiques.
       <br> <br>
-      Je vous laisse maintenant admirer le rendu sur ce lien : https://musba.netlify.app/ et visualiser notre page d'accueil réalisée.
+      Je vous laisse maintenant admirer le rendu en cliquant <a href="https://musba.netlify.app/" style="text-decoration: underline">juste ici</a> et visualiser notre page d'accueil réalisée.
     </p>
   </div>
 </section>
