--- a/developpement_compte_instagram.html
+++ b/developpement_compte_instagram.html
@@ -29,7 +29,7 @@
   </div>
 
   <div class="text-presentation">
-    <img class="statistiques_abonnes" src="/images/statistiques/Statistiques_abonnés_citation_tendresse.png"
+    <img class="statistiques_abonnes" src="/images/statistiques/Statistiques_abonnes_citation_tendresse.png"
       alt="statistiques abonnés instagram citation_tendrese">
 
 
@@ -90,7 +90,7 @@
   </div>
 
   <div>
-    <img class="statistiques_abonnés" src="/images/statistiques/Statistiques_abonnés.jpg" alt="Statistiques abonnés">
+    <img class="statistiques_abonnés" src="/images/statistiques/Statistiques_abonnes.jpg" alt="Statistiques abonnés">
   </div>
 </section>
 
