--- a/motion_design.html
+++ b/motion_design.html
@@ -29,7 +29,7 @@
   </div>
 
   <div class="container">
-    <iframe class="responsive-iframe" src="https://drive.google.com/file/d/1GaRX14P5csdEPDc1pihySVcd3WsvhZvn/view?usp=sharing/preview"></iframe>
+    <iframe class="responsive-iframe" src="https://drive.google.com/file/d/1GaRX14P5csdEPDc1pihySVcd3WsvhZvn/view?usp=sharing"></iframe>
   </div>
 
   <div class="text-presentation">
